--- a/index.html
+++ b/index.html
@@ -12,7 +12,89 @@
     />
   </head>
   <body>
-    <h1 class="text-danger">Hello, world!</h1>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"> Shop phone</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Admin</a
+                >
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success" type="submit">
+                Search
+              </button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <div class="container mx-auto">
+      <div class="row">
+        <div class="col-3">
+          <div class="card" style="width: 18rem">
+            <img src="./image/product1.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Iphone x</h5>
+              <p class="card-text">Thiết kế mang tính đột phá</p>
+              <a href="#" class="btn btn-primary">xem chi tiết</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card" style="width: 18rem">
+            <img src="./image/product2.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Iphone x</h5>
+              <p class="card-text">Thiết kế mang tính đột phá</p>
+              <a href="#" class="btn btn-primary">xem chi tiết</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card" style="width: 18rem">
+            <img src="./image/product3.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Iphone x</h5>
+              <p class="card-text">Thiết kế mang tính đột phá</p>
+              <a href="#" class="btn btn-primary">xem chi tiết</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card" style="width: 18rem">
+            <img src="./image/product4.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Iphone x</h5>
+              <p class="card-text">Thiết kế mang tính đột phá</p>
+              <a href="#" class="btn btn-primary">xem chi tiết</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
