--- a/index.html
+++ b/index.html
@@ -52,48 +52,7 @@
     </header>
 
     <div class="container mx-auto">
-      <div class="row">
-        <div class="col-3">
-          <div class="card" style="width: 18rem">
-            <img src="./image/product1.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Iphone x</h5>
-              <p class="card-text">Thiết kế mang tính đột phá</p>
-              <a href="#" class="btn btn-primary">xem chi tiết</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="card" style="width: 18rem">
-            <img src="./image/product2.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Iphone x</h5>
-              <p class="card-text">Thiết kế mang tính đột phá</p>
-              <a href="#" class="btn btn-primary">xem chi tiết</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="card" style="width: 18rem">
-            <img src="./image/product3.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Iphone x</h5>
-              <p class="card-text">Thiết kế mang tính đột phá</p>
-              <a href="#" class="btn btn-primary">xem chi tiết</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="card" style="width: 18rem">
-            <img src="./image/product4.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Iphone x</h5>
-              <p class="card-text">Thiết kế mang tính đột phá</p>
-              <a href="#" class="btn btn-primary">xem chi tiết</a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div id="phoneList" class="row"></div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
